--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "quick.db": "^7.1.3",
     "twemoji-parser": "^13.1.0"
   },
-  "name": "anti-nuke",
+  "name": "SnipeBot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
