--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "quick.db": "^7.1.3",
     "twemoji-parser": "^13.1.0"
   },
-  "name": "SnipeBot",
+  "name": "snipe",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
